# guidelines

./: .gitignore  .readthedocs.yml  Makefile  README.rst  branding.rst  conf.py  index.rst  pyproject.toml
docs/: Makefile  branding.rst  conf.py  index.rst
