[tool.poetry]
name = "guidelines"
version = "0.1.0"
description = ""
authors = ["Read the Docs, Inc"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scour = "^0.38.2"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
